package eapli.base.atividade.domain;

public enum EstadoAtividade {

    PENDENTE,COMPLETO;

}
