@startuml
'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

class EspecificarServicoController <<application>>
class Criticidade <<domain>>
class Prioridade <<domain>>
class Data <<domain>>
class EstadoAtividade <<domain>>
class Decisao <<domain>>
class Comentario <<domain>>
class AtividadeManual <<domain>>


EspecificarServicoController --> Criticidade
EspecificarServicoController --> Prioridade
EspecificarServicoController --> Data
EspecificarServicoController --> EstadoAtividade
EspecificarServicoController --> Decisao
EspecificarServicoController --> Comentario
EspecificarServicoController --> AtividadeManual


Criticidade : crit = create()
Decisao : des = create()
Comentario : coment = create()
Prioridade : prio = create()
Data : data = create()
EstadoAtividade : estado = create()
AtividadeManual : create(crit,prio,data,estado,des,coment)


@enduml